--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 *** Laravel eWUŚ changelog ***
 
+1.0.1 - 20.07.2017
+* Added console command for password reset
+
 1.0.0 - 20.07.2017
 * Initial release
