--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
 *** Laravel eWUŚ changelog ***
 
+1.0.2 - 26.07.2017
+* New response class - PeselResponse
+* Removed Classes\Pesel class
+* Added cache to PESEL check
+* Changed naming convention
+
 1.0.1 - 20.07.2017
 * Added console command for password reset
 
