--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 *** Laravel eWUŚ changelog ***
 
+1.0.3 - 09-08-2017
+* Fixed undefined method error in console command
+
 1.0.2 - 26.07.2017
 * New response class - PeselResponse
 * Removed Classes\Pesel class
