--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 *** Laravel eWUŚ changelog ***
 
+1.0.4 - 18-07-2018
+* Fixed error in "hasError" method
+
 1.0.3 - 09-08-2017
 * Fixed undefined method error in console command
 
